imagen y URL adicionados

--- a/02-atributos.html
+++ b/02-atributos.html
@@ -9,7 +9,10 @@
 <body>
     <h1>Atributos</h1>
 
+    <img src="http://mi_imagen.png" alt="casa">
 
+    <a href="https://drive.google.com/file/d/1VL7d8609HH86h_nrjOvwUhWHIfBC2NNH/view"> Ir a programación semanal </a>
+    
 
 
 </body>
