--- a/02-atributos.html
+++ b/02-atributos.html
@@ -11,7 +11,7 @@
 
     <img src="http://mi_imagen.png" alt="casa">
 
-    <a href="https://drive.google.com/file/d/1VL7d8609HH86h_nrjOvwUhWHIfBC2NNH/view"> Ir a programación semanal </a>
+    <a href="https://drive.google.com/file/d/1VL7d8609HH86h_nrjOvwUhWHIfBC2NNH/view" title = "Visitar página lms"> Ir a programación semanal </a>
     
 
 
