--- a/02-atributos.html
+++ b/02-atributos.html
@@ -13,7 +13,11 @@
 
     <a href="https://drive.google.com/file/d/1VL7d8609HH86h_nrjOvwUhWHIfBC2NNH/view" title = "Visitar página lms"> Ir a programación semanal </a>
     
-
+    <h1>productos</h1>
+    <article>
+        <huevos></huevos>
+        <p data-price= "20">20</p>
+        
 
 </body>
 </html>
