--- a/05-enlaces.html
+++ b/05-enlaces.html
@@ -5,6 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <!--enlaces favicon-->
+
+    <link rel="icon" href="favicom.png">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
+
+    <script src="/carpeta/estilos.js"></script>
+
 </head>
 <body>
     <h1>Enlaces</h1>
