--- a/index.html
+++ b/index.html
@@ -14,5 +14,10 @@
     <h4>Item 4</h4>
     <h5>Item 5</h5>
     <h6>Item 6</h6>  
+
+<hr>
+<br>
+<img src="logo html.png" alt="Logo html">
+
 </body>
 </html>
