--- a/09-formularios.html
+++ b/09-formularios.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Formularios</h1>
-    <form method="POST" action="https://express-server-method.herokuapp.com/">
+    <form method="GET" action="https://express-server-method.herokuapp.com/">
 
     <!--Recibir información-->
     <input>
