--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Título</title>
+
+    <meta property="og:title" content="Curso HTML5" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content= "https://gamezquitac.github.io/primer-proyecto-html/" />
+    <meta property="og:image" content="http://127.0.0.1:5500/logo%20html.png" />
+
+    <meta property="og:description" content="Practicando con html y formularios - Proyecto UniAntioquia y MinTic" />
+
+
+
+
 </head>
+
 <body>
     <!--Comentario-->
     <h1>Item 1</h1>
@@ -13,11 +26,12 @@
     <h3>Item 3</h3>
     <h4>Item 4</h4>
     <h5>Item 5</h5>
-    <h6>Item 6</h6>  
+    <h6>Item 6</h6>
 
-<hr>
-<br>
-<img src="logo html.png" alt="Logo html">
+    <hr>
+    <br>
+    <img src="logo html.png" alt="Logo html">
 
 </body>
+
 </html>
